# EpLua

./: .dockerignore  .env.example  .gitignore  .luacheckrc  AGENTS.md  C4.md  OSP.md  PROJECT_STATUS_full.md  README.md  docker-compose.yml
apps/api/: errors.py  main.py  openapi.json  pyproject.toml  runtime_policy.py  schemas.py  structured_logging.py
apps/api/adapters/: model.py
apps/api/cli/: main.py
apps/api/routes/: generate.py
apps/api/services/: generation.py
apps/api/tests/: test_cli.py  test_critic_localization.py  test_generate.py  test_health.py  test_model_adapter.py  test_prompter.py  test_quality_loop.py  test_repair_metrics.py  test_runtime_packaging.py  test_validator_tools.py
benchmark/: initial_regression_pack.json  lua_tasks_100_cases.json  lua_tasks_additional_200_cases.json  public_cases.json  semantic_judge_regressions.json  synthetic_cases.json
docker/: README.md
docker/api/: Dockerfile
docker/ollama/: init-model.sh
docs/: AGENTIC_ITERATION_PLAN.md  AGENT_ARCHITECTURE.md  AGENT_PIPELINE_SEQUENCE.md  CLI_CLIENT.md  CONSTRAINTS.md  DOMAIN_MODEL.md  FORBIDDEN_PATTERNS.md  MVP_DEFINITION.md  OUTPUT_MODES.md  PROJECT_STATUS.md  SKILLS.md  STATE_MACHINE.md  TASK_ARCHETYPES.md  how_validation_work.md  validation_pipline.md
knowledge/archetypes/: datetime_conversion.json  filtering.json  normalization.json  (+2 more)
scripts/: build_benchmark_tail_triage.py  import_lua_benchmark_tasks.py  run_full_benchmark_report.py  run_lua_7_progon_benchmark.py  setup_lua_tooling.ps1
slides/: luamts_presentation.md  render_presentation_pdf.py
(+4 files in other folders)
