[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "luamts-api"
version = "0.1.0"
description = "Local backend service for luaMTS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "rich>=13.0,<14.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.scripts]
luamts = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
py-modules = ["errors", "main", "runtime_policy", "schemas", "structured_logging"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "cli*", "routes*", "services*"]

[tool.pytest.ini_options]
pythonpath = [".", "../.."]
